// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check reading and app-deleting the message 1`] = `
Array [
  Object {
    "content": "memberMessage",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": false,
    "id": "dbId:MessageV2Repository:1",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "readBy": Array [
      Object {
        "id": "dbId:MessageReadByUserRepository:1",
        "sphereId": "dbId:SphereRepository:1",
        "updatedAt": "1970-01-01T00:00:00.000Z",
        "userId": "dbId:UserRepository:2",
      },
    ],
    "recipients": Array [
      Object {
        "userId": "dbId:UserRepository:2",
      },
    ],
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;

exports[`Check reading and app-deleting the message 2`] = `Array []`;

exports[`Create and get messages sent to self without duplicates: Admins direct messages 1`] = `
Array [
  Object {
    "content": "adminDirect:Message",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": false,
    "id": "dbId:MessageV2Repository:1",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "recipients": Array [
      Object {
        "userId": "dbId:UserRepository:1",
      },
    ],
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;

exports[`Create and get messages: Admins messages 1`] = `
Array [
  Object {
    "content": "member&guest:Message",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": false,
    "id": "dbId:MessageV2Repository:1",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "recipients": Array [
      Object {
        "userId": "dbId:UserRepository:2",
      },
      Object {
        "userId": "dbId:UserRepository:3",
      },
    ],
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "content": "guest:Message",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": false,
    "id": "dbId:MessageV2Repository:2",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "recipients": Array [
      Object {
        "userId": "dbId:UserRepository:3",
      },
    ],
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "content": "everyoneMessageIncAdmin",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": true,
    "id": "dbId:MessageV2Repository:3",
    "includeSenderInEveryone": true,
    "ownerId": "dbId:UserRepository:1",
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "content": "everyoneMessageExOwner",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": true,
    "id": "dbId:MessageV2Repository:4",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;

exports[`Create and get messages: messages for guest 1`] = `
Array [
  Object {
    "content": "member&guest:Message",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": false,
    "id": "dbId:MessageV2Repository:1",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "recipients": Array [
      Object {
        "userId": "dbId:UserRepository:2",
      },
      Object {
        "userId": "dbId:UserRepository:3",
      },
    ],
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "content": "guest:Message",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": false,
    "id": "dbId:MessageV2Repository:2",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "recipients": Array [
      Object {
        "userId": "dbId:UserRepository:3",
      },
    ],
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "content": "everyoneMessageIncAdmin",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": true,
    "id": "dbId:MessageV2Repository:3",
    "includeSenderInEveryone": true,
    "ownerId": "dbId:UserRepository:1",
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "content": "everyoneMessageExOwner",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": true,
    "id": "dbId:MessageV2Repository:4",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;

exports[`Create and get messages: messages for member 1`] = `
Array [
  Object {
    "content": "member&guest:Message",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": false,
    "id": "dbId:MessageV2Repository:1",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "recipients": Array [
      Object {
        "userId": "dbId:UserRepository:2",
      },
      Object {
        "userId": "dbId:UserRepository:3",
      },
    ],
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "content": "everyoneMessageIncAdmin",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": true,
    "id": "dbId:MessageV2Repository:3",
    "includeSenderInEveryone": true,
    "ownerId": "dbId:UserRepository:1",
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "content": "everyoneMessageExOwner",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": true,
    "id": "dbId:MessageV2Repository:4",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;
